test(api): 통합테스트 케이스 분리 및 정비